--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "@radix-ui/react-icons": "latest",
+    "@reown/appkit": "^1.6.0",
+    "@reown/appkit-adapter-wagmi": "^1.6.0",
+    "@tanstack/react-query": "^5.62.7",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/wagmi": "^5.1.11",
     "autoprefixer": "latest",
     "class-variance-authority": "latest",
     "clsx": "^2.1.1",
@@ -31,6 +36,8 @@
     "react-dom": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "latest",
-    "typescript": "latest"
+    "typescript": "latest",
+    "viem": "^2.21.55",
+    "wagmi": "^2.14.1"
   }
 }
